fix vertical alignment of fontawesome once and for all

--- a/src/crate/theme/rtd/crate/static/css/ng/page-tools.scss
+++ b/src/crate/theme/rtd/crate/static/css/ng/page-tools.scss
@@ -28,6 +28,12 @@
   }
 }
 
+details.sd-dropdown {
+  summary.sd-summary-title {
+    align-items: center;
+  }
+}
+
 // Titles: Do not use bold font.
 .feedback-compact-title,
 .version-chooser-title {
